Fix spacing and add ochrs

--- a/styles/global.css
+++ b/styles/global.css
@@ -239,13 +239,17 @@ article img,
   margin: 0 auto;
 }
 
+.post > .inline-flex {
+  column-gap: 0.5rem;
+}
+
 .post-description {
   flex-basis: 70%;
   flex-grow: 2;
 }
 
 .post-image {
-  margin: auto auto auto 0.5rem;
+  margin: auto;
 }
 
 .post-image img {
